# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.21476 (26 Dec 2012)

  26 Dec 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21476.ebuild,
  -portage-2.2.01.21165.ebuild:
  Version bump, matches 2.2.0_alpha149+, fixes bugs #439488 and #442348

*portage-2.2.01.21418 (02 Dec 2012)

  02 Dec 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21418.ebuild,
  -portage-2.2.01.21143.ebuild:
  Version bump, matches 2.2.0_alpha144+, support for Python 3

*portage-2.2.01.21313 (22 Oct 2012)

  22 Oct 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21313.ebuild,
  -portage-2.2.01.21003.ebuild:
  Version bump, matches 2.2.0_alpha141+, has EAPI5 support

*portage-2.2.01.21165 (30 Sep 2012)

  30 Sep 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21165.ebuild,
  -portage-2.2.01.20972.ebuild:
  Version bump, matches 2.2.0_alpha134+, includes updated seatbelt/macosx
  sandbox support

*portage-2.2.01.21143 (26 Sep 2012)

  26 Sep 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21143.ebuild,
  -portage-2.2.01.20894.ebuild:
  Version bump, matches v2.2.0_alpha133

*portage-2.2.01.21003 (12 Sep 2012)

  12 Sep 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.21003.ebuild,
  -portage-2.2.01.20837.ebuild:
  Version bump, matches 2.2.0_alpha127

*portage-2.2.01.20972 (09 Sep 2012)

  09 Sep 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20972.ebuild,
  -portage-2.2.01.20796.ebuild:
  Version bump, matches 2.2.0_alpha125+

*portage-2.2.01.20894 (27 Aug 2012)

  27 Aug 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20894.ebuild,
  -portage-2.2.01.20757.ebuild:
  Version bump, matches 2.2.0_alpha123

  20 Aug 2012; Fabian Groffen <grobian@gentoo.org> portage-2.2.01.20837.ebuild:
  Up the requirement for bash to 4.1, since redirect_alloc_fd better relies on